<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="appName">Media Fever</string>
	<string name="appNameFree">Media Fever Lite</string>

	<string name="movie">Movie</string>
	<string name="movies">Movies</string>
	<string name="series">Series</string>
	<string name="moviesAndSeries">Movies &amp; Series</string>
	<string name="whatToWatch">What to Watch</string>
	<string name="whatToWatchDescription">What we offer you to watch</string>
	<string name="selected">%1$s selected</string>
	<string name="logout">Logout</string>
	<string name="accept">Accept</string>
	<string name="reject">Reject</string>
	<string name="settings">Settings</string>
	<string name="save">Save</string>

	<!-- Login -->
	<string name="requiredEmail">The email is required</string>
	<string name="invalidEmail">The email is not valid</string>
	<string name="requiredPassword">The password is required</string>
	<string name="invalidCredentials">Invalid Credentials</string>
	<string name="invalidPassword">The password must be at least %1$s characters</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="signUp">Sign Up</string>
	<string name="buyFullApp">Buy Full App</string>

	<!-- User Profile -->
	<string name="profile">Profile</string>
	<string name="photo">Photo</string>
	<string name="firstName">First Name</string>
	<string name="lastName">Last Name</string>
	<string name="email">Email</string>
	<string name="publicProfile">Public Profile</string>
	<string name="publicProfileDescription">If you set this flag, your profile will be visible by users that are not your friends</string>
	<string name="userProfileSaved">Your profile was successfully saved</string>
	<string name="confirmEmail">Confirm Email</string>
	<string name="changePassword">Change Password</string>
	<string name="confirmPassword">Confirm Password</string>
	<string name="requiredFirstName">The first name is required</string>
	<string name="requiredLastName">The last name is required</string>
	<string name="requiredConfirmEmail">The email confirmation is required</string>
	<string name="requiredConfirmPassword">The password confirmation is required</string>
	<string name="emailsDoNotMatch">Emails do not match</string>
	<string name="passwordsDoNotMatch">Passwords do not match</string>
	<string name="duplicatedUsername">Email already registered</string>

	<!-- Social Fragment -->
	<string name="social">Social</string>
	<string name="linkAccount">Link your account to Facebook for an improved experience</string>
	<string name="newWaysToConnect">Look for new ways to connect in the future!</string>
	<string name="accountConnected">Your account has been connected to Facebook successfully!</string>
	<string name="accountDisconnected">Your account has been disconnected from Facebook.</string>

	<!-- Seasons Fragment -->
	<string name="seasons">Seasons</string>
	<string name="season">Season %1$s</string>

	<!-- Watchable -->
	<string name="overview">Overview</string>
	<string name="actors">Actors</string>
	<string name="genres">Genres</string>
	<string name="mediaSession">Media Session</string>
	<string name="viewTrailer">View Trailer</string>
	<string name="addToWatched">Add to Watched</string>
	<string name="removeFromWatched">Remove from Watched</string>
	<string name="todayDateFormat">Today</string>

	<!-- Watchable Social -->
	<string name="watchedByFriend">Watched by %1$s friend</string>
	<string name="watchedByFriends">Watched by %1$s friends</string>
	<string name="onTheWishListOfFriend">On the Wishlist of %1$s friend</string>
	<string name="onTheWishListOfFriends">On the Wishlist of %1$s friends</string>
	<string name="noResultsMovieSocial">Your friends didn\'t watch this movie</string>
	<string name="noResultsSeriesSocial">Your friends didn\'t watch this series</string>

	<!-- WishList -->
	<string name="wishList">Wish List</string>
	<string name="wishListDescription">Movies &amp; series on your wish list</string>
	<string name="noResultsWishList">There are no items in your Wish List</string>

	<!-- Watched -->
	<string name="watched">Watched</string>
	<string name="watchedDescription">Your watched movies &amp; series</string>
	<string name="noResultsWatched">There are no items in your Watched List</string>

	<!-- Friends -->
	<string name="friends">Friends</string>
	<string name="friendsDescription">Connect with your friends</string>
	<string name="noResultsFriends">You can invite friends from Facebook</string>
	<string name="remove">Remove</string>
	<string name="friendRemoved">Your friend was successfully removed</string>
	<string name="facebook">Facebook</string>
	<string name="requests">Requests</string>
	<string name="searchUsers">Search Users</string>
	<string name="friendRequest">Friend Request</string>
	<string name="addUser">Do you want to add %1$s as a friend?</string>
	<string name="addedAsFriend">%1$s was added as a friend</string>
	<string name="invitedToBeYourFriend">%1$s was invited to be your friend</string>
	<string name="appInviteTitle">App Invitation</string>
	<string name="appInviteMessage">Do you want to invite %1$s to install this app?</string>
	<string name="invitedToApp">%1$s was invited to be install this app</string>

	<!-- Friends Requests -->
	<string name="friendsRequests">Friends Requests</string>
	<string name="noResultsFriendsRequests">There are no pending friends\' requests</string>

	<!-- Search Users -->
	<string name="searchByNameOrEmail">Search by name or email</string>

	<!-- Media Sessions -->
	<string name="mediaSessions">Media Sessions</string>
	<string name="mediaSessionsDescription">Movies &amp; series events with friends</string>
	<string name="newMediaSession">New Media Session</string>
	<string name="noResultsMediaSessions">There are no media sessions</string>
	<string name="pendingSessions">Pending Sessions</string>
	<string name="activeSessions">Active Sessions</string>
	<string name="expiredSessions">Expired Sessions</string>
	<string name="addMediaSession">Add Media Session</string>
	<string name="editMediaSession">Edit Media Session</string>
	<string name="leaveMediaSession">Leave Media Session</string>
	<string name="leaveMediaSessionConfirmation">Do you want to leave this media session?</string>
	<string name="sessionType">Media type</string>
	<string name="sessionDate">Session date</string>
	<string name="anyDate">Any Date</string>
	<string name="anyTime">Any Time</string>
	<string name="mediaSessionFriendsHeader">Pick the friends you want to invite to this media session</string>
	<string name="accepted">Accepted</string>
	<string name="pending">Pending</string>
	<string name="mediaSessionCreatedTitle">Media Session created</string>
	<string name="mediaSessionCreatedDescription">Now you and your friends can pick the %1$s and start voting</string>
	<string name="mediaSelectionsHeader">Pick the %1$s you want to add to this media session</string>
	<string name="mediaSelectionsExpiredHeader">This media session is expired</string>
	<string name="mediaSelectionsStarts">Starts: %1$s</string>
	<string name="moviesOrSeries">movies or series</string>
	<string name="addNewSelection">+</string>
	<string name="details">Details</string>
	<string name="thumbsUp">Thumbs Up</string>
	<string name="thumbsDown">Thumbs Down</string>
	<string name="selection">Selection</string>
	<string name="manualSelection">Manual Selection</string>
	<string name="manualSelectionDescription">You decide which is the next movie or series to watch.</string>
	<string name="randomSelection">Random Selection</string>
	<string name="randomSelectionDescription">Select a movie or series randomly.</string>
	<string name="smartSelection">SMART Selection</string>
	<string name="smartSelectionDescription">Let us decide for you which is the best movie or series to watch according to your preferences.
	</string>
	<string name="mediaSelectionDuplicated">This movie or series is already present on the media session</string>
	<string name="mediaSelectionAdded">%1$s added %2$s</string>
	<string name="mediaSelectionRemoved">%1$s removed %2$s</string>
	<string name="mediaSelectionThumbsUp">%1$s thumbs up %2$s</string>
	<string name="mediaSelectionThumbsDown">%1$s thumbs down %2$s</string>
	<string name="mediaSessionLeft">%1$s left this media session</string>
	<string name="mediaSessionExpired">This media session is expired. You can\'t edit or vote.</string>
	<string name="mediaSessionCreationExpired">You can\'t create a media session with a past date.</string>
	<string name="mediaSessionEditionExpired">You can\'t edit a media session to a past date.</string>
	<string name="mediaSessionWinner">And the winner is …</string>
	<string name="mediaSessionWhatIsTitle">What is a media session?</string>
	<string name="mediaSessionWhatIsDescription">A media session is an event you can create to watch a movie or series with a group of friends. All
		the participants can vote and propose new movies or series to watch. As soon as the event finishes, we will let you
		know which one was the winner.
	</string>
	<string name="mediaSessionHowToCreateTitle">How to create a media session?</string>
	<string name="mediaSessionHowToCreateDescription">To create a new media session, tap the \"+\" icon at the action bar. Also, if you are on the
		details
		screen of any movie or series, you can tap on the \"Media Session\" button to create a new one.
	</string>

	<!-- Notifications -->
	<string name="mediaSessionInvitationTickerText">%1$s invited you to a media session</string>
	<string name="mediaSessionInvitationContentTitle">Media session</string>
	<string name="mediaSessionInvitationContentText">%1$s invited you</string>
	<string name="friendRequestTickerText">%1$s wants to be your friend</string>
	<string name="friendRequestContentTitle">Friendship Request</string>
	<string name="friendRequestContentText">%1$s want to be your friend</string>
	<string name="newEpisodeTickerText">New \"%1$s\" episode</string>
	<string name="newEpisodeContentText">New Episode: %1$s</string>

	<!-- Search -->
	<string name="search">Search</string>
	<string name="searchHint">Search movies &amp; series</string>
	<string name="searchDescription">Movies &amp; Series</string>

	<!-- About -->
	<string name="shareSubject">Media Fever</string>
	<string name="shareContent">Organize movies or series sessions with your friends.
		Download it from Google Play.
		https://play.google.com/store/apps/details?id=%1$s</string>

</resources>
