<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/editMediaSessionItem" android:icon="@android:drawable/ic_menu_edit" android:title="@string/editMediaSession"
		android:showAsAction="ifRoom" />
	<item android:id="@+id/leaveMediaSessionItem" android:icon="@drawable/ic_action_leave" android:title="@string/leaveMediaSession"
		android:showAsAction="ifRoom" />
	<item android:id="@+id/searchItem" android:icon="@android:drawable/ic_menu_search" android:title="@string/search"
		android:showAsAction="ifRoom" />
	<item android:id="@+id/settingsItem" android:icon="@android:drawable/ic_menu_manage" android:title="@string/settings" />
	<item android:id="@+id/aboutItem" android:showAsAction="never" android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/about" />
	<item android:id="@+id/debugSettingsItem" android:icon="@android:drawable/ic_menu_preferences" android:title="@string/debugSettings"
		android:showAsAction="never" />
	<item android:id="@+id/logoutItem" android:icon="@android:drawable/ic_menu_close_clear_cancel" android:title="@string/logout" />
</menu>