<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/adViewContainer">

		<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo_big"
				android:layout_gravity="center_horizontal" android:layout_marginTop="15dp" android:layout_marginBottom="15dp" />

			<TextView style="@style/textView" android:text="@string/email" />
			<EditText android:id="@+id/email" style="@style/editText" android:inputType="textEmailAddress" />

			<TextView style="@style/textView" android:text="@string/password" />
			<EditText android:id="@+id/password" style="@style/editText" android:inputType="textPassword" />

			<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:gravity="center_horizontal" android:layout_marginTop="10dp">

				<Button android:id="@+id/login" style="@style/defaultButton" android:text="@string/login"
					android:layout_gravity="center_horizontal" android:minWidth="140dp" />

				<Button android:id="@+id/signUp" style="@style/defaultButton" android:text="@string/signUp"
					android:layout_gravity="center_horizontal" android:minWidth="140dp" />
			</LinearLayout>

			<Button android:id="@+id/buyFullApp" style="@style/defaultLargeButton" android:text="@string/buyFullApp"
				android:layout_gravity="center_horizontal" android:minWidth="140dp" />

		</LinearLayout>

	</ScrollView>
	<include layout="@layout/ad_view_container" />

</RelativeLayout>
