<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/adViewContainer">

		<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
			android:orientation="vertical" android:padding="10dp">

			<TextView android:id="@+id/name" android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:textStyle="bold" android:textSize="22sp" style="@style/whiteShadowText" />
			<TextView android:id="@+id/tagline" style="@style/normalText" android:textStyle="bold" android:visibility="gone" />

			<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:paddingTop="10dp">
				<RelativeLayout android:layout_height="@dimen/watchableOverviewHeight" android:layout_width="@dimen/watchableOverviewWidth">
					<View android:layout_height="match_parent" android:layout_width="match_parent" android:background="@android:color/white" />
					<com.jdroid.android.images.CustomImageView android:id="@+id/image"
						android:scaleType="centerCrop" android:layout_width="match_parent" android:layout_height="match_parent"
						android:layout_margin="1dp" android:src="@drawable/watchable_default" />
				</RelativeLayout>
				<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
					android:orientation="vertical" android:paddingLeft="10dp">
					<TextView android:id="@+id/releaseYear" style="@style/normalText" android:textStyle="bold" />
					<Button android:id="@+id/watchedToogle" android:layout_height="wrap_content" android:layout_width="wrap_content"
						android:layout_marginTop="5dp" android:minWidth="160dp" android:text="@string/watched" android:drawableRight="@drawable/accept" />
					<Button android:id="@+id/wishListToogle" android:layout_height="wrap_content" android:layout_width="wrap_content"
						android:minWidth="160dp" android:text="@string/wishList" android:drawableRight="@drawable/reject" />
				</LinearLayout>
			</LinearLayout>

			<TextView android:id="@+id/actorsTitle" style="@style/sectionTitle" android:text="@string/actors"
				android:layout_marginTop="8dp" />
			<TextView android:id="@+id/actors" style="@style/normalText" />

			<TextView android:id="@+id/genresTitle" style="@style/sectionTitle" android:text="@string/genres"
				android:layout_marginTop="8dp" />
			<TextView android:id="@+id/genres" style="@style/normalText" />

			<TextView android:id="@+id/overviewTitle" style="@style/sectionTitle" android:text="@string/overview"
				android:layout_marginTop="8dp" />
			<TextView android:id="@+id/overview" style="@style/normalText" />

			<Button android:id="@+id/viewTrailerButton" style="@style/button" android:text="@string/viewTrailer"
				android:layout_gravity="center_horizontal" android:layout_marginTop="10dp" android:visibility="gone" />

		</LinearLayout>
	</ScrollView>
	<include layout="@layout/ad_view_container" />

</RelativeLayout>